Removed the configuration of the nav bar elements to use flex positioning, using column flow, if the screen is 600px wide or narrower. Set such an elemets to avoid text wrapping in order to force them to be one line even for very narrow screen, preserving the margin between them and being centered horizontally.

--- a/css/main.css
+++ b/css/main.css
@@ -69,28 +69,23 @@ body {
     position: sticky;
     top: 0;
     display: flex;
+    flex-flow: column;
+    gap: 0.5rem;
     align-items: center;
     justify-content: center;
     z-index: 1;
+    white-space: nowrap;
   }
 
   .floating-first {
-    position: absolute;
-    top: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-    /* overflow: hidden; */
-    text-overflow: ellipsis;
+    position: sticky;
+    top: 0;
+    left: auto;
   }
 
   .floating-second {
-    position: absolute;
-    top: 3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-    /* overflow: hidden; */
-    text-overflow: ellipsis;
+    position: sticky;
+    top: 0;
+    left: auto;
   }
 }
